--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,13 @@ allure {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.projectlombok:lombok:1.18.24'
     testImplementation 'mysql:mysql-connector-java:8.0.31'
@@ -32,7 +34,7 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.1'
     testImplementation 'org.postgresql:postgresql:42.5.0'
     testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
-
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
 }
 
 test {
