--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@ allure {
 }
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
@@ -40,4 +39,5 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
 }
